fixed gap between nav bar and 'You gotta give'

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ p {
     flex-wrap: nowrap;
     flex-grow: 1;
     flex-shrink: 1;
+    min-height: 78px;
     top: 0;
     box-shadow: 0px -5px 20px #323295;
 }
